--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+c<html>
   <head>
     <tital> my portfolio </tital>
     </head>
@@ -21,3 +21,70 @@
     
 </html> </body> </section>
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+body
+{
+  text-align:center;
+  backgroung:linear-gradient(#e1bee7 0%,#90caf9 100%);
+  back-groung repeat:no repeat
+}
+h1{
+  text-shadow:2px 2px #F8BBDO
+    font-size:20px;
+}
+bio{
+  padding:20px;
+    font-size:18;
+    test-align:center;
+  img
+  {
+    border-radious:50%;
+    width:100px
